[package]
name = "xladd-derive"
version = "0.3.0"
authors = ["Ronnie Chowdhury <Ronnie.c995@gmail.com>"]
edition = "2018"
license = "MIT"
description="A simple macro that helps write Excel UDF functions in Rust"
readme="Readme.MD"
repository="https://github.com/ronniec95/xladd-derive"
keywords = ["excel","userdefined","udf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
use_ndarray = ["xladd/use_ndarray", "ndarray"]

[dependencies]
syn={version="1", features=["full", "extra-traits"] }
quote="1"
proc-macro2="1"
ndarray={version="^0.13", optional=true}
xladd = "0.1"

[lib]
proc-macro=true

[patch.crates-io]
xladd = { git ="https://github.com/ronniec95/xladd" }