[package]
name = "xladd-derive"
version = "0.4.1"
authors = ["Ronnie Chowdhury <Ronnie.c995@gmail.com>"]
edition = "2018"
license = "MIT"
description="A simple macro that helps write Excel UDF functions in Rust"
readme="Readme.MD"
repository="https://github.com/ronniec95/xladd-derive"
keywords = ["excel","userdefined","udf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
syn={version="1", features=["full", "extra-traits"] }
quote="1"
proc-macro2="1"
ndarray = {version="^0.13", optional=true}

[lib]
proc-macro=true

[patch.crates-io]
xladd = { git ="https://github.com/ronniec95/xladd" , features=["use_ndarray"]  }

