[package]
name = "net_lib"
version = "0.1.0"
authors = ["ronniec95 <ronnie.c995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde="^1"
serde_derive="^1"
bincode = "1.1.4"
futures = { version = "0.3", features = ["thread-pool"] }
async-std = "^1"
byteorder = "1"
rand = "0.7.0"
rmp="^0.8"
pico-args="^0.3"
chrono="^0.4"
toml = "0.5.6"

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled","chrono","blob"]