[package]
name = "net_lib"
version = "0.1.0"
authors = ["ronniec95 <ronnie.c995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde="^1"
serde_derive="^1"
bincode = "1.1.4"
futures = { version = "0.3.4", features = ["thread-pool"] }
async-std = "^1"
byteorder = "1"
pico-args="^0.3"
chrono="^0.4"
toml = "0.5.6"
num-traits = "0.2"
num-derive = "0.3"
nom="^5"
cookie-factory="^0.3"
urlparse = "^0.7"
smallvec="^1"
log = "^0.4.8"
simplelog = "^0.7"
tide = "0.6"

[dependencies.rand]
version = "^0.7"
features = ["small_rng"]

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled","chrono","blob"]