[package]
name = "xlmacro"
version = "0.1.0"
authors = ["Ronnie Chowdhury <Ronnie.c995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn={version="1", features=["full","extra-traits"] }
quote="1"
proc-macro2="1"
rust_xl = {path="../xladd"}

[lib]
proc-macro=true